# Geojsonhash

./: LICENSE  Makefile  README.md  mypy.ini  pyproject.toml
.github/workflows/: ci.yml  release.yml
examples/: example.py
examples/resources/: geojson.json
geojsonhash/: __init__.py  geojsonhash.py
tests/: test_geojsonhash.py
tests/resources/: geojson_1.json  geojson_2.json  geojson_3.json
