[tool.poetry]
name = "geojsonhash"
version = "0.1.0"
description = "Get a unique identifier for a given geojson"
authors = ["Adrián Segura"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
pygeohash = ">=1.2.0"
pytest = ">=6.2.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
